outputs_20260331-211012-d2135dce/codegen/production/build_logs/compiler_stderr.log
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_d9_e4wsv\include/IfxEgtm_Pwm.h:6,
                 from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_d9_e4wsv\src\egtm_atom_3_phase_inverter_pwm.c:17:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_d9_e4wsv\include/IfxEgtm.h:21:5: error: unknown type name 'IfxApProt_Owner'
   21 |     IfxApProt_Owner protOwner;
      |     ^~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_d9_e4wsv\include/IfxEgtm.h:22:5: error: unknown type name 'IfxApProt_State'
   22 |     IfxApProt_State protState;
      |     ^~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_d9_e4wsv\include/IfxEgtm_Pwm.h:19:5: error: unknown type name 'IfxEgtm_Atom_ToutMap'
   19 |     IfxEgtm_Atom_ToutMap atom;
      |     ^~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_d9_e4wsv\include/IfxEgtm_Pwm.h:20:5: error: unknown type name 'IfxEgtm_Tom_ToutMap'
   20 |     IfxEgtm_Tom_ToutMap  tom;
      |     ^~~~~~~~~~~~~~~~~~~

In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_d9_e4wsv\mocks\mock_egtm_atom_3_phase_inverter_pwm.c:5:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_d9_e4wsv\include/IfxEgtm.h:21:5: error: unknown type name 'IfxApProt_Owner'
   21 |     IfxApProt_Owner protOwner;
      |     ^~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_d9_e4wsv\include/IfxEgtm.h:22:5: error: unknown type name 'IfxApProt_State'
   22 |     IfxApProt_State protState;
      |     ^~~~~~~~~~~~~~~
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_d9_e4wsv\mocks\mock_egtm_atom_3_phase_inverter_pwm.c:7:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_d9_e4wsv\include/IfxEgtm_Pwm.h:19:5: error: unknown type name 'IfxEgtm_Atom_ToutMap'
   19 |     IfxEgtm_Atom_ToutMap atom;
      |     ^~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_d9_e4wsv\include/IfxEgtm_Pwm.h:20:5: error: unknown type name 'IfxEgtm_Tom_ToutMap'
   20 |     IfxEgtm_Tom_ToutMap  tom;
      |     ^~~~~~~~~~~~~~~~~~~
